# caterpillar

./: .codespellrc  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cog.toml  deny.toml
.ci/: check.sh
.github/workflows/: pull_request.yml  push.yml  test.yml
.reuse/: dep5
LICENSES/: MIT.txt
docs/: overview.dot
src/: config.rs  dbus.rs  device.rs  error.rs  macros.rs  main.rs  proxy.rs  rauc.rs
src/proxy/: login1.rs  rauc.rs  udisks.rs
tests/: integration.rs
tests/common/: cmd.rs  error.rs  image.rs  mod.rs  path.rs  pki.rs  rauc.rs
tests/mkosi/ab_image/: mkosi.conf  mkosi.prepare
tests/mkosi/ab_image/mkosi.extra/etc/rauc/: system.conf
tests/mkosi/ab_image/mkosi.extra/etc/systemd/system-preset/: 00-ab_image.preset
tests/mkosi/ab_image/mkosi.repart/: 00_persistent.conf  02_esp_a.conf  02_esp_b.conf  03_root_a.conf  03_root_b.conf
tests/mkosi/base_image/: mkosi.conf  mkosi.postinst  mkosi.prepare
tests/mkosi/bundle_image/: mkosi.conf
tests/mkosi/bundle_image/repart/btrfs/empty/: 00_bundle.conf
tests/mkosi/bundle_image/repart/btrfs/multiple/: 00_bundle.conf
tests/mkosi/bundle_image/repart/btrfs/single/: 00_bundle.conf
tests/mkosi/bundle_image/repart/ext4/empty/: 00_bundle.conf
tests/mkosi/bundle_image/repart/ext4/multiple/: 00_bundle.conf
tests/mkosi/bundle_image/repart/ext4/single/: 00_bundle.conf
tests/mkosi/bundle_image/repart/vfat/empty/: 00_bundle.conf
tests/mkosi/bundle_image/repart/vfat/multiple/: 00_bundle.conf
tests/mkosi/bundle_image/repart/vfat/single/: 00_bundle.conf
tests/mkosi/single_image/: mkosi.conf
tests/mkosi/single_image/mkosi.repart/: 00_esp.conf  01_root.conf
(+12 files in other folders)
