# SPDX-FileCopyrightText: 2023 David Runge <dave@sleepmap.de>
# SPDX-License-Identifier: CC0-1.0
[package]
authors = ["David Runge <dave@sleepmap.de>"]
categories = ["asynchronous", "command-line-utilities", "filesystem", "os::linux-apis"]
description = "Detect and apply RAUC update bundles during boot"
documentation = "https://docs.rs/caterpillar"
edition = "2021"
keywords = ["RAUC", "boot", "installation", "update"]
license = "MIT OR Apache-2.0"
name = "caterpillar"
readme = "README.md"
repository = "https://github.com/dvzrv/caterpillar"
rust-version = "1.70.0"
version = "0.1.0"

# Tweak release profile settings for faster code.
# - enable link time optimization
# - reduce the code generation units
# See <https://doc.rust-lang.org/cargo/reference/profiles.html>
[profile.release]
lto = true
codegen-units = 1

[dependencies]
async-std = {version = "1.12.0", features = ["attributes", "tokio1"]}
config = "0.13.3"
dbus-udisks2 = {version = "0.3.0", features = ["futures"]}
futures = "0.3.28"
once_cell = "1.17.1"
regex = "1.8.1"
semver = "1.0.17"
strum = {version = "0.24.1", features = ["derive"]}
strum_macros = "0.24.3"
thiserror = "1.0.47"
tokio = {version = "1.28.0", features = ["rt-multi-thread", "macros"]}
version-compare = "0.1.1"
zbus = {version = "3.12.0", default-features = false, features = ["tokio"]}
zvariant = "3.12.0"

[dev-dependencies]
assert_cmd = "2.0.12"
dbus-launch = "0.2.0"
fslock = "0.2.1"
rstest = "0.17.0"
serial_test = { version = "2.0.0", features = ["file_locks"] }
temp-dir = "0.1.11"
testdir = "0.7.3"
testresult = "0.3.0"
tmpdir = "1.0.0"
tracing = "0.1.37"
which = "4.4.2"
